--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 
-spring.kafka.consumer.bootstrap-servers=localhost:29092
-spring.kafka.producer.bootstrap-servers=localhost:29092
+spring.kafka.consumer.bootstrap-servers=192.168.1.5:9092
+spring.kafka.producer.bootstrap-servers=192.168.1.5:9092
 spring.kafka.consumer.group-id=my-group
+spring.kafka.bootstrap-servers=192.168.1.5:9092
